Whole template converted into ReactJS

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -924,7 +924,7 @@ section:focus{
     position:absolute;
     left:50%;
     top:50%;
-    background-image:url(../img/loaders/rings.svg);
+    background-image:url(../img/rings.svg);
     background-size:80px 80px;
     background-repeat:no-repeat;
     background-position:center;
